--- a/clasificacion.css
+++ b/clasificacion.css
@@ -144,10 +144,22 @@ h2 {
     .tabla-clasificacion tbody tr:nth-child(odd) {
         font-size: 0.9em; /* Reducir el tamaño de la fuente */
     }
+
+    .leyenda {
+        margin-top: 10px !important;
+        border-radius: 5px;
+        font-size: 0.8em;
+        color: #333;
+        text-align: left;
+    }
+    
+    .leyenda p {
+        margin: 3px 0;
+    }
 }
 
 .leyenda {
-    margin-top: 10px;
+    margin-top: 20px !important;
     padding: 10px;
     border-radius: 5px;
     font-size: 0.9em;
