--- a/clasificacion.css
+++ b/clasificacion.css
@@ -115,8 +115,15 @@ h2 {
     }
 
     /* Ajuste de la tabla */
+    .tabla-clasificacion {
+        display: block;
+        overflow-x: auto; /* Agrega scroll horizontal si es necesario */
+        white-space: nowrap;
+    }
+
+    /* Ajuste de la tabla */
     .tabla-clasificacion th, .tabla-clasificacion td {
-        font-size: 0.8em; /* Reduce el tamaño de la fuente */
+        font-size: 1em; /* Reduce el tamaño de la fuente */
         padding: 8px; /* Reduce el padding */
     }
 
@@ -142,27 +149,15 @@ h2 {
     /* Ajuste de las filas de la tabla */
     .tabla-clasificacion tbody tr:nth-child(even),
     .tabla-clasificacion tbody tr:nth-child(odd) {
-        font-size: 0.9em; /* Reducir el tamaño de la fuente */
-    }
-
-    .leyenda {
-        margin-top: 10px !important;
-        border-radius: 5px;
-        font-size: 0.8em;
-        color: #333;
-        text-align: left;
-    }
-    
-    .leyenda p {
-        margin: 3px 0;
+        font-size: 1em; /* Reducir el tamaño de la fuente */
     }
 }
 
 .leyenda {
-    margin-top: 20px !important;
-    padding: 10px;
+    margin-top: 15px;
+    padding: 12px;
     border-radius: 5px;
-    font-size: 0.9em;
+    font-size: 1em;
     color: #333;
     text-align: left;
 }
