--- a/clasificacion.css
+++ b/clasificacion.css
@@ -122,16 +122,16 @@ h2 {
 
     /* Ajuste del encabezado */
     header {
-        padding: 10px 0;
+        padding: 5px 0;
     }
 
     /* Ajuste de los enlaces de la navegación */
     nav ul {
-        padding: 10px 0;
+        padding: 5px 0;
     }
 
     nav ul li {
-        margin: 5px 5px;
+        margin: 0 5px;
     }
 
     nav ul li a {
