--- a/index.css
+++ b/index.css
@@ -109,21 +109,20 @@ h2 {
 
     /* Ajuste del encabezado */
     header {
-        padding: 10px 0;
+        padding: 5px 0;
     }
 
     /* Ajuste de los enlaces de la navegación */
     nav ul {
-        flex-direction: column;
-        padding: 10px 0;
+        padding: 5px 0;
     }
 
     nav ul li {
-        margin: 5px 0;
+        margin: 0 5px;
     }
 
     nav ul li a {
-        font-size: 1.3em; /* Reducir tamaño de fuente para móviles */
+        font-size: 1em; /* Reducir tamaño de fuente para móviles */
     }
 
     /* Ajuste de la tabla */
