--- a/jornadas.css
+++ b/jornadas.css
@@ -105,18 +105,23 @@ nav ul li a:hover {
 
 /* Media Queries para móviles */
 @media screen and (max-width: 1300px) {
-    /* Ajustar la barra de navegación */
+    
+    /* Ajuste del encabezado */
+    header {
+        padding: 5px 0;
+    }
+
+    /* Ajuste de los enlaces de la navegación */
     nav ul {
-        flex-direction: column;
-        padding: 10px 0;
+        padding: 5px 0;
     }
 
     nav ul li {
-        margin: 5px 0;
+        margin: 0 5px;
     }
 
     nav ul li a {
-        font-size: 1.3em; /* Reducir tamaño de fuente */
+        font-size: 1em; /* Reducir tamaño de fuente para móviles */
     }
 
     /* Ajustar el contenedor */
